--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 *.sch-bak
 *.kicad_pcb-bak
 
-# Fichier Gerber
+# Fichiers Gerber
 *.gbr
+*.gbo
+*.gbs
+*.gbl
+*.gtl
 *.drl
+*.gm1
+
+# FreeCad
+*.FCStd1
